retoques al shop y al detail

--- a/src/main/resources/static/web/shop.html
+++ b/src/main/resources/static/web/shop.html
@@ -16,7 +16,7 @@
     <title>Shop - Balcam's</title>
 </head>
 
-<body id="app" class="bg-body">
+<body id="app">
     <!-- NAV -->
     <nav class="mi-h-[7vh] lg:min-h-[7vh] relative bg-[#1E1E1E] shadow-lg ">
         <div class="container px-6 py-6 mx-auto">
@@ -117,13 +117,12 @@
                                         name="add-outline">
                                     </ion-icon>
                                 </div>
-                                <ion-icon @click="deleteItem(product)" class="text-xl text-white" name="close-outline">
-                                </ion-icon>
+                                <ion-icon @click="deleteItem(product)" class="text-xl text-white cursor-pointer" name="close-outline"></ion-icon>
 
                             </div>
                         </div>
                         <div class="flex w-full items-center justify-between">
-                            <button class="w-[65%] bg-green-700 px-5 py-2 rounded text-white">
+                            <button class="w-[65%] bg-[#f1d24d] font-bold px-5 py-2 rounded text-black">
                                 <a href="./checkout.html">Continue checkout</a> 
                             </button>
                             <button @click="cleanCart"
@@ -148,7 +147,7 @@
                             <div v-for="product in cartProducts"
                                 class="flex justify-between items-center w-full border-b">
                                 <img :src="product.urlImg" class="h-24 object-contain">
-                                <h3 class="text-white truncate w-[200px]">Whey protein z-10 aguante river</h3>
+                                <h3 class="text-white truncate w-[200px]">{{product.name}}</h3>
                                 <div
                                     class="bg-yellow-400  flex justify-between items-center gap-2 px-1 py-2 border rounded">
                                     <ion-icon @click="deleteItemCart(product)" class="text-black text-2xl"
@@ -164,7 +163,6 @@
                 </div>
             </div>
         </div>
-
     </nav>
     <transition>
         <div v-if="noStock" class="z-40 sticky top-0 w-full text-white bg-red-500">
@@ -212,10 +210,10 @@
         <div class="h-full w-[30vh] hidden lg:flex">
             <div class="p-5">
                 <div class=" flex flex-col gap-5 mt-2 text-5xl ">
-                    <h2 class="font-bold text-white text-3xl cursor-default">
+                    <h2 class="font-bold text-3xl cursor-default">
                         Categories
                     </h2>
-                    <div v-for="category in categories" class="cursor-pointer text-white">
+                    <div v-for="category in categories" class="cursor-pointer">
                         <h4 @click="selectFilter(category)" :class="checkedCategory == category ? 'font-bold' : ''"
                             class="text-xl">
                             {{category}}
@@ -226,20 +224,21 @@
                 </div>
                 <hr>
                 <div class="pt-5">
-                    <h2 class="font-bold text-2xl text-white cursor-default">
+                    <h2 class="font-bold text-2xl cursor-default">
                         Price
                     </h2>
                     <input @input="rangePriceFilter(inputRange)" value="100" max="300" v-model="inputRange" type="range"
                         name="priceRange" id="priceRange">
-                    <h4 class="text-white text-xl">Up to: {{moneyFormat.format(inputRange)}}</h4>
+                    <h4 class="text-xl">Up to: {{moneyFormat.format(inputRange)}}</h4>
                 </div>
                 <div>
-                    <h2 class="mt-4 pt-16 text-1xl text-[#f1d24d] font-bold"><a href="./index.html">
+                    <h2 class=" mt-4 pt-16 text-1xl text-yellow-500 font-bold">
+                        <a href="./index.html">
                             <ion-icon name="arrow-back-outline"></ion-icon>BACK TO LOGIN
-                        </a></h2>
+                        </a>
+                    </h2>
                 </div>
             </div>
-
         </div>
         <!-- CATEGORIES ENDS  -->
 
@@ -247,7 +246,7 @@
         <div class="min-h-full w-[120vh]">
             <div class="p-5 flex flex-col">
                 <div class="flex justify-between items-center w-full lg:w-[87%]">
-                    <h2 class="font-bold text-white text-4xl cursor-default ">
+                    <h2 class="font-bold text-4xl cursor-default ">
                         Sale Off
                     </h2>
                     <div class="flex items-center justify-center gap-2 border p-2">
