--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -33,7 +33,7 @@
 
 </head>
 
-<body>
+<body id="app">
     <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
@@ -421,7 +421,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center" id="app">
+            <div class="row justify-content-center" >
                 <div class=" col-lg-3 col-sm-6" v-for="workouts in workouts">
                     <div class="single_schedule mt-30">
                         <div>
