--- a/src/main/resources/static/web/profile.html
+++ b/src/main/resources/static/web/profile.html
@@ -90,19 +90,19 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ml-auto">
                                     <li class="nav-item active">
-                                        <a class="page-scroll" href="#home">Home</a>
+                                        <a class="page-scroll" href="./index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#courses">Lessons</a>
+                                        <a class="page-scroll" href="./index.html#courses">Lessons</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#about">About</a>
+                                        <a class="page-scroll" href="./index.html#about">About</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="./shop.html">Shop</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="page-scroll" href="#pricing">Membership</a>
+                                        <a class="page-scroll" href="./index.html#pricing">Membership</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="./contact.html">Contact</a>
