--- a/src/main/resources/static/web/shop.html
+++ b/src/main/resources/static/web/shop.html
@@ -82,7 +82,7 @@
                             <span class="absolute top-0 left-0 p-1 text-xs text-white bg-blue-500 rounded-full"></span>
                         </div>
                     </button>
-                    <div >
+                    <div>
                         <a :href="'./profile.html?id='+clients.id"><i class="lni lni-user"></i></a>
                     </div>
                 </div>
@@ -103,8 +103,7 @@
                                 class="flex justify-between items-center w-full border-b">
                                 <img :src="product.urlImg" class="pl-5 h-24 object-contain">
                                 <h3 class="text-white truncate w-[200px]">{{product.name}}</h3>
-                                <div
-                                    class="flex justify-between items-center gap-2 px-1 py-2 border rounded">
+                                <div class="flex justify-between items-center gap-2 px-1 py-2 border rounded">
                                     <ion-icon @click="reduceQuantity(product)"
                                         class="cursor-pointer text-white text-2xl select-none " name="remove-outline">
                                     </ion-icon>
@@ -117,13 +116,14 @@
                                         name="add-outline">
                                     </ion-icon>
                                 </div>
-                                <ion-icon @click="deleteItem(product)" class="text-xl text-white cursor-pointer" name="close-outline"></ion-icon>
+                                <ion-icon @click="deleteItem(product)" class="text-xl text-white cursor-pointer"
+                                    name="close-outline"></ion-icon>
 
                             </div>
                         </div>
                         <div class="flex w-full items-center justify-between">
                             <button class="w-[65%] bg-[#f1d24d] font-bold px-5 py-2 rounded text-black">
-                                <a href="./checkout.html">Continue checkout</a> 
+                                <a href="./checkout.html">Continue checkout</a>
                             </button>
                             <button @click="cleanCart"
                                 class="w-[30%] flex justify-center gap-2 items-center bg-red-700 px-5 py-2 rounded text-white">
@@ -207,7 +207,7 @@
     </transition>
     <section class="flex w-full flex-col lg:flex-row flex-wrap justify-center gap-10 pt-5">
         <!-- CATEGORIES  -->
-        <div class="h-full flex flex-col w-[30vh] hidden lg:flex">
+        <div class="h-full flex flex-col w-[30vh] hidden lg:flex border-r">
             <div class="p-5">
                 <div class=" flex flex-col gap-5 mt-2 text-5xl ">
                     <h2 class="font-bold text-3xl cursor-default">
@@ -219,8 +219,8 @@
                             {{category}}
                         </h4>
                     </div>
-                    <hr >
-                    
+                    <hr>
+
                 </div>
                 <hr>
                 <div class="pt-5">
@@ -240,47 +240,44 @@
                 </div>
             </div>
             <div class=" flex flex-col flex-wrap">
-                <h3 class="font-bold text-xl pb-5">Interest products...</h3>
+                <h3 class="font-bold text-xl pb-5">Last Units!</h3>
+
                 <div v-for="(product, i) in filteredProducts"
-                class="lg:border-0 border overflow-hidden rounded shadow flex flex-col gap-2 w-full">
-                <div class="relative flex items-center justify-center">
-                    <div v-if="product.stock < 5" class=" absolute left-0 top-3 rounded-r bg-red-600 z-20">
-                        <p class="p-2 px-4 text-white uppercase bold">Few units left</p>
+                    class="lg:border-0 border overflow-hidden rounded shadow flex flex-col gap-2 h-[300px] w-[200px]">
+                    <div class="relative flex items-center justify-center">
+                        <div v-if="product.stock < 5" class=" absolute left-0 top-3 rounded-r bg-red-600 z-20">
+                            <p class="p-2 px-4 text-white uppercase bold">Few units left</p>
+                        </div>
+                        <img :src="product.urlImg"
+                            class=" object-cover h-48 z-10 transition-all duration-150 relative lg:absolute"
+                            alt="product.name">
+                        <div class="lg:visible invisible absolute z-0 bg-gray-600/25 h-[290px] w-[290px]"></div>
                     </div>
 
-                    <img :src="product.urlImg"
-                        class="hover:rotate-0 lg:hover:rotate-12 object-cover h-48 lg:h-[210px] z-10 transition-all duration-150 hover:scale-100 lg:hover:scale-[1.4] relative lg:absolute"
-                        alt="product.name">
-                    <div class="lg:visible invisible absolute z-0 bg-gray-600/25 h-[290px] w-[290px]"></div>
-                    <img v-if="i % 2 == 0" class="hidden lg:block object-cover" :src="productsBg[1]"
-                        alt="NIKE AIR">
-                    <img v-else class="hidden lg:block object-cover" :src="productsBg[0]">
-                </div>
-
-                <div class="flex flex-col justify-between h-full lg:bg-white bg-[#1e1e1e]">
-                    <a :href="'./productdetails.html?id='+product.id">
-                        <h2 class="truncate-shop text-xl font-medium text-white lg:text-gray-700 p-2">
-                            {{product.name}}</h2>
-                    </a>
-                    <div class="flex justify-between items-center p-3">
-                        <h3 class=" font-bold text-xl text-white lg:text-[#1e1e1e]">
-                            {{moneyFormat.format(product.price)}}</h3>
-                        <button :disabled="product.stockAux == 0" @click="addCart(product)"
-                            class="lg:text-white text-black bg-[#f1d24d] lg:hover:bg-[#f1d24d] transition-all duration-150 flex flex-row-reverse gap-2 jusfy-around items-center lg:bg-gray-900 px-2 py-1 rounded">
-                            <h4 class="">Add to cart</h4>
-                            <div class="relative transition-colors duration-300 transform ">
-                                <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M3 3H5L5.4 5M7 13H17L21 5H5.4M7 13L5.4 5M7 13L4.70711 15.2929C4.07714 15.9229 4.52331 17 5.41421 17H17M17 17C15.8954 17 15 17.8954 15 19C15 20.1046 15.8954 21 17 21C18.1046 21 19 20.1046 19 19C19 17.8954 18.1046 17 17 17ZM9 19C9 20.1046 8.10457 21 7 21C5.89543 21 5 20.1046 5 19C5 17.8954 5.89543 17 7 17C8.10457 17 9 17.8954 9 19Z"
-                                        stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                        stroke-linejoin="round" />
-                                </svg>
-                            </div>
-                        </button>
+                    <div class="flex flex-col justify-between h-full lg:bg-white bg-[#1e1e1e]">
+                        <a :href="'./productdetails.html?id='+product.id">
+                            <h2 class="truncate-shop text-xl font-medium text-white lg:text-gray-700 p-2">
+                                {{product.name}}
+                            </h2>
+                        </a>
+                        <div class="flex justify-between items-center p-3">
+                            <h3 class=" font-bold text-xl text-white lg:text-[#1e1e1e]">
+                                {{moneyFormat.format(product.price)}}</h3>
+                            <button :disabled="product.stockAux == 0" @click="addCart(product)"
+                                class="lg:text-white text-black bg-[#f1d24d] lg:hover:bg-[#f1d24d] transition-all duration-150 flex flex-row-reverse gap-2 jusfy-around items-center lg:bg-gray-900 px-2 py-1 rounded">
+                                <div class="relative transition-colors duration-300 transform ">
+                                    <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M3 3H5L5.4 5M7 13H17L21 5H5.4M7 13L5.4 5M7 13L4.70711 15.2929C4.07714 15.9229 4.52331 17 5.41421 17H17M17 17C15.8954 17 15 17.8954 15 19C15 20.1046 15.8954 21 17 21C18.1046 21 19 20.1046 19 19C19 17.8954 18.1046 17 17 17ZM9 19C9 20.1046 8.10457 21 7 21C5.89543 21 5 20.1046 5 19C5 17.8954 5.89543 17 7 17C8.10457 17 9 17.8954 9 19Z"
+                                            stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                            stroke-linejoin="round" />
+                                    </svg>
+                                </div>
+                            </button>
+                        </div>
                     </div>
                 </div>
-            </div>
             </div>
         </div>
         <!-- CATEGORIES ENDS  -->
