--- a/src/main/resources/static/web/contact.html
+++ b/src/main/resources/static/web/contact.html
@@ -329,7 +329,7 @@
                             <h4 class="footer_title">Contact</h4>
                             <ul class="info">
                                 <li>Phone: 093826715212</li>
-                                <li><a href="https://wa.link/d73goe"><i class="lni lni-whatsapp"></i></a> Whatsapp</li>
+                                <li><a href="https://wa.link/d73goe"></a> Whatsapp</li>
                                 <li>Email: balcamscontact@gmail.com</li>
                                 <li>Location: Jackson Heights, New York, USA</li>
                             </ul>
@@ -370,14 +370,12 @@
                                 </li>
                                 <li><a href="https://www.linkedin.com/"><i class="lni lni-linkedin-original"></i></a>
                                 </li>
-
                             </ul>
-                        </div> <!-- footer info -->
+                        </div>
                     </div>
                 </div> <!-- row -->
             </div> <!-- container -->
         </div> <!-- footer widget -->
-
         <div class="footer_copyright">
             <div class="container">
                 <div class="copyright text-center">
@@ -420,8 +418,8 @@
     <!--====== Main js ======-->
     <script src="assets/js/main.js"></script>
 
-     <!--====== SweetAlert2 ======-->
-     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!--====== SweetAlert2 ======-->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
