--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -122,7 +122,7 @@
         </div> <!-- navbar area -->
 
         <div id="home" class="header-hero bg_cover align-items-center">
-            <div>
+            <div class="videoText_container">
                 <video autoplay muted loop id="myVideo" class="landingVideo">
                     <source src="./assets/images/videos/landingVideo.mp4" type="video/mp4">
                 </video>
@@ -151,7 +151,7 @@
 
     <!--====== COURSES PART START ======-->
 
-    <section id="courses" class="courses_area pt-100">
+    <section id="courses" class="courses_area ">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-8">
